--- a/templates/monitor2.html
+++ b/templates/monitor2.html
@@ -54,21 +54,30 @@
                 </tbody>
             </table>
           </p>
-          <p>Temperatura : {{lectura}}</p>
-          <p>{% if color == 1 %}
-              <div style = "width: 500px; height: 500px; background-color:blue;"></div>
-              {% endif %}
-          </p>
+          <p>Temperatura : {{lecturas}}</p>
+          <table>
+              <tr>
+                {%for color in colores%}
+                    {% if color == 1 %}
+                    <td>
+                        <div style = "width: 50px; height: 50px; background-color:lightblue;"></div>
+                    </td>    
+                    {% endif %}
 
-          <p>{% if color == 2 %}
-            <div style = "width: 500px; height: 500px; background-color:green;"></div>
-            {% endif %}
-          </p>
+                    {% if color == 2 %}
+                    <td>
+                        <div style = "width: 50px; height: 50px; background-color:green;"></div>
+                    </td>
+                    {% endif %}
 
-          <p>{%if color == 3%}
-            <div style = "width: 500px; height: 500px; background-color:red;"></div>
-            {% endif %}
-          </p>
+                    {%if color == 3%}
+                    <td>
+                        <div style = "width: 50px; height: 50px; background-color:red;"></div>
+                    </td>
+                    {% endif %}
+                {%endfor%} 
+              </tr>
+            </table>
     
 </body>
 </html>
